fix fixmenu z-index

--- a/app/assets/stylesheets/public/main.css
+++ b/app/assets/stylesheets/public/main.css
@@ -618,3 +618,9 @@ color: #757575 !important;
 .card .card-title{
     font-size: 19px !important;
 }
+
+#fix-menu-bar{
+    z-index: 999999;
+}
+
+    
